--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
         </nav>
     </div>
     <h1>Alain Cohn</h1>
-    <!-- ADD PICTURE -->
+    <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture">
     <h2>News</h2>
     <div class="newpublications">
         <h3>New Publications</h3>
