--- a/media.html
+++ b/media.html
@@ -66,5 +66,6 @@
             <h3>Podcasts:</h3>
             <a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? (WBEZ 91.5 Chicago)</a>
         </div>
+    </div>
 </body>
 </html>
