Added nav bar HTML and CSS
Created navigation CSS and added HTML to each current page. The nav bar uses Fontawesome, and it seems to be slow loading in... going to try to resolve that bug later. I am using float just for this nav bar, the rest of the site should use flex.

--- a/contact.html
+++ b/contact.html
@@ -4,26 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="nav">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="research.html">RESEARCH</a></li>
-                <li><a href="teaching.html">TEACHING</a></li>
-                <li><a href="media.html">MEDIA</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="links.html">LINKS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </div>
-        <header>
+  <!-- Hidden visually, intended for screen readers -->
+  <div class="skip"><a href="#main">Skip to Main Content</a></div>
+
+  <!-- Begin top navigation bar -->
+
+  <header>
+  <div id="navigations">
+  <a href="#main-menu" id="main-menu-toggle" class="menu-toggle" aria-label="Open main menu">
+    <span class="sr-only">Open main menu</span>
+    <span class="fa fa-bars" aria-hidden="true"></span>
+  </a>
+
+  <a href="index.html">
+    <h1 id="logo">Alain Cohn</h1>
+  </a>
+
+  <nav id="main-menu" class="main-menu" aria-label="Main menu">
+    <a href="#main-menu-toggle" id="main-menu-close" class="menu-close" aria-label="Close main menu">
+      <span class="sr-only">Close main menu</span>
+      <span class="fa fa-close" aria-hidden="true"></span>
+    </a>
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="research.html">RESEARCH</a></li>
+      <li><a href="teaching.html">TEACHING</a></li>
+      <li><a href="media.html">MEDIA</a></li>
+      <li><a href="cv.html">CV</a></li>
+      <li><a href="links.html">LINKS</a></li>
+      <li><a href="contact.html" id="currentpage">CONTACT</a></li>
+    </ul>
+  </nav>
+  <a href="#main-menu-toggle"
+     class="backdrop"
+     tabindex="-1"
+     aria-hidden="true" hidden></a>
+</div>
+</header>
+  <div class="container">
+<!--        <header>
             <h1>Alain Cohn</h1>
-            <h2>Contact</h2>
+
             <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
-        </header>
+        </header> -->
+        <h2>Contact</h2>
         <div class="info text-block">
             <p>The University of Michigan School of Information</p>
             <p>105 S State St</p>
