--- a/index.html
+++ b/index.html
@@ -7,25 +7,53 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-    <div class="nav">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="research.html">RESEARCH</a></li>
-            <li><a href="teaching.html">TEACHING</a></li>
-            <li><a href="media.html">MEDIA</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="links.html">LINKS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
-    <header>
+  <!-- Hidden visually, intended for screen readers -->
+  <div class="skip"><a href="#main">Skip to Main Content</a></div>
+
+  <!-- Begin top navigation bar -->
+
+  <header>
+  <div id="navigations">
+  <a href="#main-menu" id="main-menu-toggle" class="menu-toggle" aria-label="Open main menu">
+    <span class="sr-only">Open main menu</span>
+    <span class="fa fa-bars" aria-hidden="true"></span>
+  </a>
+
+  <a href="index.html">
+    <h1 id="logo">Alain Cohn</h1>
+  </a>
+
+  <nav id="main-menu" class="main-menu" aria-label="Main menu">
+    <a href="#main-menu-toggle" id="main-menu-close" class="menu-close" aria-label="Close main menu">
+      <span class="sr-only">Close main menu</span>
+      <span class="fa fa-close" aria-hidden="true"></span>
+    </a>
+    <ul>
+      <li><a href="index.html" id="currentpage">HOME</a></li>
+      <li><a href="research.html">RESEARCH</a></li>
+      <li><a href="teaching.html">TEACHING</a></li>
+      <li><a href="media.html">MEDIA</a></li>
+      <li><a href="cv.html">CV</a></li>
+      <li><a href="links.html">LINKS</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+    </ul>
+  </nav>
+  <a href="#main-menu-toggle"
+     class="backdrop"
+     tabindex="-1"
+     aria-hidden="true" hidden></a>
+</div>
+</header>
+  <!--  <header>
     <h1>Alain Cohn</h1>
     <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture">
-    </header>
+  </header> -->
+  <!-- Begin container -->
+  <div class="container">
     <div class="aboutme">
         <h3>About Me</h3>
         <p>I am an Assistant Professor of Information at the University of Michigan School of Information. My research lies at the intersection of economics, finance and psychology. Much of my work uses lab and field experiments, often in collaboration with firms and government agencies, to explore topics like honesty, employee motivation and financial decision making. My studies have been published in top general interest and economics outlets such as Nature, Science, American Economic Review, Review of Economic Studies and Review of Financial Studies.</p>
