--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Alain Cohn</title>
 </head>
 <body>
   <!-- Hidden visually, intended for screen readers -->
@@ -50,10 +50,10 @@
 </header>
   <!--  <header>
     <h1>Alain Cohn</h1>
-    <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture">
   </header> -->
   <!-- Begin container -->
   <div class="container">
+        <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=200px>
     <div class="aboutme">
         <h3>About Me</h3>
         <p>I am an Assistant Professor of Information at the University of Michigan School of Information. My research lies at the intersection of economics, finance and psychology. Much of my work uses lab and field experiments, often in collaboration with firms and government agencies, to explore topics like honesty, employee motivation and financial decision making. My studies have been published in top general interest and economics outlets such as Nature, Science, American Economic Review, Review of Economic Studies and Review of Financial Studies.</p>
