--- a/teaching.html
+++ b/teaching.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Alain Cohn</title>
 </head>
 <body>
   <!-- Hidden visually, intended for screen readers -->
