--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
 </header>
   <!--  <header>
     <h1>Alain Cohn</h1>
+<img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=200px>
   </header> -->
   <!-- Begin container -->
   <div class="container">
-        <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=200px>
     <div class="aboutme">
         <h3>About Me</h3>
         <p>I am an Assistant Professor of Information at the University of Michigan School of Information. My research lies at the intersection of economics, finance and psychology. Much of my work uses lab and field experiments, often in collaboration with firms and government agencies, to explore topics like honesty, employee motivation and financial decision making. My studies have been published in top general interest and economics outlets such as Nature, Science, American Economic Review, Review of Economic Studies and Review of Financial Studies.</p>
     </div>
-    <div class="news text-block">
-    <h2>News</h2>
-    <div class="newpublications">
+    <div class="news">
+      <h2>News</h2>
+      <div class="newpublications">
         <h3>New Publications</h3>
         <p>Civic Honesty Around the Globe (Science, available for free on the "Research" page)</p>
-    </div>
-    <div class="newpapers">
+      </div>
+      <div class="newpapers">
         <h3>New Working Papers</h3>
         <p>Why Do The Rich Oppose Redistribution? An Experiment With America's Top 5%</p>
-    </div>
+      </div>
     </div>
     </div>
 </body>
