change teaching layout

--- a/teaching.html
+++ b/teaching.html
@@ -49,7 +49,7 @@
 </div>
 </header>
   <div class="container">
-    <h2>Teaching</h2>
+    <h2 id="teaching">Teaching</h2>
     <h3>2019</h3>
     <ul>
         <li>Choice Architecture (Master), University of Michigan</li>
