--- a/teaching.html
+++ b/teaching.html
@@ -49,39 +49,41 @@
 </div>
 </header>
   <div class="container">
-    <h2 id="teaching">Teaching</h2>
-    <h3>2019</h3>
-    <ul>
-        <li>Choice Architecture (Master), University of Michigan</li>
-        <li>Persuasion and Social Influence (Bachelor), University of Michigan</li>
-    </ul>
-    <h3>2018</h3>
-    <ul>
-        <li>Choice Architecture (Master), University of Michigan</li>
-    </ul>
-    <h3>2016</h3>
-    <ul>
-        <li>Responsible Leadership through Choice Architecture (MBA, guest lectures), University of Chicago Booth School of Business</li>
-    </ul>
-    <h3>2014</h3>
-    <ul>
-        <li>Topics in Experimental and Behavioral Economics (Ph.D.), University of Zurich</li>
-    </ul>
-    <h3>2013</h3>
-    <ul>
-        <li>Business Experiments (MBA, guest lectures), University of Zurich</li>
-        <li>Advanced Microeconomics (Bachelor), University of Zurich</li>
-        <li>Topics in Experimental and Behavioral Economics (Ph.D.), University of Zurich</li>
-    </ul>
-    <h3>2012</h3>
-    <ul>
-        <li>Business Experiments (MBA, guest lectures), University of Zurich</li>
-        <li>Empirical Methods of Experimental Economics (Master), University of Zurich</li>
-    </ul>
-    <h3>2011</h3>
-    <ul>
-        <li>Empirical Methods of Experimental Economics (Master), University of Zurich</li>
-    </ul>
+    <div class="teaching">
+      <h2 id="heading2">Teaching</h2>
+      <h3>2019</h3>
+      <ul>
+          <li>Choice Architecture (Master), University of Michigan</li>
+          <li>Persuasion and Social Influence (Bachelor), University of Michigan</li>
+      </ul>
+      <h3>2018</h3>
+      <ul>
+          <li>Choice Architecture (Master), University of Michigan</li>
+      </ul>
+      <h3>2016</h3>
+      <ul>
+          <li>Responsible Leadership through Choice Architecture (MBA, guest lectures), University of Chicago Booth School of Business</li>
+      </ul>
+      <h3>2014</h3>
+      <ul>
+          <li>Topics in Experimental and Behavioral Economics (Ph.D.), University of Zurich</li>
+      </ul>
+      <h3>2013</h3>
+      <ul>
+          <li>Business Experiments (MBA, guest lectures), University of Zurich</li>
+          <li>Advanced Microeconomics (Bachelor), University of Zurich</li>
+          <li>Topics in Experimental and Behavioral Economics (Ph.D.), University of Zurich</li>
+      </ul>
+      <h3>2012</h3>
+      <ul>
+          <li>Business Experiments (MBA, guest lectures), University of Zurich</li>
+          <li>Empirical Methods of Experimental Economics (Master), University of Zurich</li>
+      </ul>
+      <h3>2011</h3>
+      <ul>
+          <li>Empirical Methods of Experimental Economics (Master), University of Zurich</li>
+      </ul>
+    </div>
   </div>
     </body>
 </html>
