--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
   </header> -->
   <!-- Begin container -->
   <div class="container">
+    <div class="profilepic">
+      <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=200px>
+    </div>
     <div class="aboutme">
-        <h3>About Me</h3>
+        <h2>About Me</h2>
         <p>I am an Assistant Professor of Information at the University of Michigan School of Information. My research lies at the intersection of economics, finance and psychology. Much of my work uses lab and field experiments, often in collaboration with firms and government agencies, to explore topics like honesty, employee motivation and financial decision making. My studies have been published in top general interest and economics outlets such as Nature, Science, American Economic Review, Review of Economic Studies and Review of Financial Studies.</p>
     </div>
     <div class="news">
