--- a/links.html
+++ b/links.html
@@ -49,11 +49,7 @@
 </div>
 </header>
   <div class="container">
-<!--        <header>
-            <h1>Alain Cohn</h1>
-
-        </header> -->
-        <h2>Links</h2>
+        <h2 id="heading2" class="linkheading">Links</h2>
         <div class="professional text-block">
             <h3>Professional</h3>
             <ul>
