Added research section

--- a/research.html
+++ b/research.html
@@ -49,9 +49,9 @@
 </div>
 </header>
   <div class="container">
-    <h2>Research</h2>
-    <h3>Publications</h3>
-    <dl>
+    <h2 id="research_h2">Research</h2>
+    <h3 id="publications_h3">Publications</h3>
+    <dl id="research">
         <dt>Civic Honesty Around The Globe [free access] (with Michel Maréchal, David Tannenbaum and Christian Zünd) Science, June 20, 2019.</dt>
         <!-- <dd><a href=""- Data and code</dd> -->
         <dt>Laboratory Measure of Cheating Predicts School Misconduct (with Michel Maréchal) Economic Journal, 128 (615), 2743–2754, 2018.</dt>
