Changed teaching and research
Softened teaching a bit and added more to research to be like teaching

--- a/research.html
+++ b/research.html
@@ -49,7 +49,8 @@
 </div>
 </header>
   <div class="container">
-    <h2 id="research_h2">Research</h2>
+    <div class="research">
+    <h2 id="heading_research">Research</h2>
     <h3 id="publications_h3">Publications</h3>
     <dl id="research">
         <dt>Civic Honesty Around The Globe [free access] (with Michel Maréchal, David Tannenbaum and Christian Zünd) Science, June 20, 2019.</dt>
@@ -96,6 +97,7 @@
     <footer>
         <p>*Note: All articles are the sole copyright of the respective publishers. Materials are provided for educational use only. Downloading of materials constitutes an agreement that the materials are for personal use only.</p>
     </footer>
+</div>
 </div>
 </body>
 </html>
