--- a/research.html
+++ b/research.html
@@ -57,24 +57,24 @@
         <!-- <dd><a href=""- Data and code</dd> -->
         <dt><a href="https://drive.google.com/file/d/1dkfYfWt4kNlipoz7u5vY7RUK1BEQf5fM/view?usp=sharing">Laboratory Measure of Cheating Predicts School Misconduct </a>(with Michel Maréchal) Economic Journal, 128 (615), 2743–2754, 2018.<h5><a href="https://drive.google.com/file/d/1OzErWjkrBKLGu7ikWKoLgYO4wFUs7ikM/view?usp=sharing">Data and code</a></h5></dt>
         <!-- <dd><a href=""- Data and code</dd> -->
-        <dt>Increasing Honesty in Humans with Electrical Brain Stimulation (with Michel Maréchal, Christian Ruff and Giuseppe Ugazio) Proceedings of the National Academy Sciences, 114 (17) 4360–4364, 2017.</dt>
+        <dt>Increasing Honesty in Humans with Electrical Brain Stimulation (with Michel Maréchal, Christian Ruff and Giuseppe Ugazio) Proceedings of the National Academy Sciences, 114 (17) 4360–4364, 2017.<h5><a href="">Online appendix</a></h5></dt>
         <!-- <dd><a href "" >Online appendix</dd> -->
-        <dt>Do Professional Norms in the Banking Industry Favor Risk-Taking? (with Ernst Fehr and Michel Maréchal) Review of Financial Studies, 30.11: 3801–3823, 2017.</dt>
+        <dt>Do Professional Norms in the Banking Industry Favor Risk-Taking? (with Ernst Fehr and Michel Maréchal) Review of Financial Studies, 30.11: 3801–3823, 2017.<h5><a href="">Online appendix</a></h5></dt>
         <!-- <dd>Online appendix</dd> -->
         <dt>Priming in Economics (with Michel Maréchal), Current Opinion in Psychology, 12:17–21, 2016.</dt>
-        <dt>Bad Boys: How Criminal Identity Salience Affects Rule Violation (with Michel Maréchal and Thomas Noll), Review of Economic Studies, 82(4): 1289–1308, 2015.</dt>
+        <dt>Bad Boys: How Criminal Identity Salience Affects Rule Violation (with Michel Maréchal and Thomas Noll), Review of Economic Studies, 82(4): 1289–1308, 2015.<h5><a href="">Online appendix</a></h5><h5><a href="">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Online appendix</dd> -->
         <!-- <dd><a href=""></a>Data and code</dd> -->
-        <dt>Evidence for Countercyclical Risk Aversion: An Experiment with Financial Professionals (with Jan Engelmann, Ernst Fehr and Michel Maréchal), American Economic Review, 105(2): 860–85, 2015.</dt>
+        <dt>Evidence for Countercyclical Risk Aversion: An Experiment with Financial Professionals (with Jan Engelmann, Ernst Fehr and Michel Maréchal), American Economic Review, 105(2): 860–85, 2015.<h5><a href="">Online appendix</a></h5><h5><a href="">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Online appendix</dd> -->
         <!-- <dd><a href=""></a>Data and Code</dd> -->
-        <dt>Fair Wages and Effort Provision: Combining Evidence from a Choice Experiment and a Field Experiment (with Ernst Fehr and Lorenz Götte), Management Science, 61(8): 1777–1794, 2015.</dt>
+        <dt>Fair Wages and Effort Provision: Combining Evidence from a Choice Experiment and a Field Experiment (with Ernst Fehr and Lorenz Götte), Management Science, 61(8): 1777–1794, 2015.<h5><a href="">Online appendix</a></h5><h5><a href="">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Online appendix</dd> -->
         <!-- <dd><a href=""></a>Data and Code</dd> -->
-        <dt>Business Culture and Dishonesty in the Banking Industry (with Ernst Fehr and Michel Maréchal), Nature, November 19, 2014.</dt>
+        <dt>Business Culture and Dishonesty in the Banking Industry (with Ernst Fehr and Michel Maréchal), Nature, November 19, 2014.<h5><a href="">Supplementary information</a></h5><h5><a href="">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Supplementary information</dd> -->
         <!-- <dd><a href=""></a>Data and Code</dd> -->
-        <dt>Social Comparison and Effort Provision: Evidence from a Field Experiment (with Ernst Fehr, Benedikt Herrmann and Frédéric Schneider), Journal of the European Economic Association, 12: 877–898, 2014.</dt>
+        <dt>Social Comparison and Effort Provision: Evidence from a Field Experiment (with Ernst Fehr, Benedikt Herrmann and Frédéric Schneider), Journal of the European Economic Association, 12: 877–898, 2014.<h5><a href="">Online appendix I</a><h5><a href="">Online appendix II</a></h5><h5><a href="">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Online appendix I</dd> -->
         <!-- <dd><a href=""></a>Online appendix II</dd> -->
         <!-- <dd><a href=""></a>Data and Code</dd> -->
