--- a/research.html
+++ b/research.html
@@ -61,8 +61,8 @@
         <!-- <dd><a href "" >Online appendix</dd> -->
         <dt><a href="https://drive.google.com/file/d/1VTM_jvNazzryPKkx1QGe2xqoyf1AV4zz/view?usp=sharing">Do Professional Norms in the Banking Industry Favor Risk-Taking?</a> (with Ernst Fehr and Michel Maréchal) Review of Financial Studies, 30.11: 3801–3823, 2017.<h5><a href="https://drive.google.com/file/d/1Fecp3Al35JVwsWnac0sYVLJ_UoMxftMq/view?usp=sharing">Online appendix</a></h5></dt>
         <!-- <dd>Online appendix</dd> -->
-        <dt>Priming in Economics (with Michel Maréchal), Current Opinion in Psychology, 12:17–21, 2016.</dt>
-        <dt>Bad Boys: How Criminal Identity Salience Affects Rule Violation (with Michel Maréchal and Thomas Noll), Review of Economic Studies, 82(4): 1289–1308, 2015.<h5><a href="">Online appendix</a></h5><h5><a href="">Data and Code</a></h5></dt>
+        <dt><a href="https://drive.google.com/file/d/1CNUBfZXXW8iTfmt7dvD8UigvF9Kx3cEe/view?usp=sharing">Priming in Economics</a> (with Michel Maréchal), Current Opinion in Psychology, 12:17–21, 2016.</dt>
+        <dt><a href="https://drive.google.com/file/d/1wb-cQKngKSvZPI6tz7sQIiFD6Qj8s812/view?usp=sharing">Bad Boys: How Criminal Identity Salience Affects Rule Violation</a> (with Michel Maréchal and Thomas Noll), Review of Economic Studies, 82(4): 1289–1308, 2015.<h5><a href="https://drive.google.com/open?id=1UpIcPhv5Xh_lDhUTQtE2qqeUBfS62AkJ">Online appendix</a></h5><h5><a href="https://drive.google.com/drive/folders/1NF92EWsTjkz7XCJLKW2jFbaWMwHgPWDR?usp=sharing">Data and Code</a></h5></dt>
         <!-- <dd><a href=""></a>Online appendix</dd> -->
         <!-- <dd><a href=""></a>Data and code</dd> -->
         <dt>Evidence for Countercyclical Risk Aversion: An Experiment with Financial Professionals (with Jan Engelmann, Ernst Fehr and Michel Maréchal), American Economic Review, 105(2): 860–85, 2015.<h5><a href="">Online appendix</a></h5><h5><a href="">Data and Code</a></h5></dt>
