--- a/research.html
+++ b/research.html
@@ -81,9 +81,9 @@
     </dl>
     <h3>Working Papers</h3>
     <ul>
-        <li>Job History, Work Attitude, and Employability (with Michel Maréchal, Frédéric Schneider and Roberto Weber), revise and resubmit at Journal of the European Economic Association</li>
-        <li>Honesty in the Digital Age (with Tobias Gesche and Michel Maréchal), revise and resubmit at Management Science</li>
-        <li>Why Do The Rich Oppose Redistribution? An Experiment With America’s Top 5% (with Lasse Jessen, Marko Klasnja and Paul Smeets)</li>
+        <li><a href="https://drive.google.com/file/d/1UGPsPc_S2qZv8JpeUv1CJDE-NxI74qMp/view?usp=sharing">Job History, Work Attitude, and Employability</a> (with Michel Maréchal, Frédéric Schneider and Roberto Weber), revise and resubmit at Journal of the European Economic Association</li>
+        <li><a href="https://drive.google.com/file/d/1XlQJ56JTXORDiSHjjjXkySFYLamZCUfE/view?usp=sharing">Honesty in the Digital Age</a> (with Tobias Gesche and Michel Maréchal), revise and resubmit at Management Science</li>
+        <li><a href="https://drive.google.com/file/d/14kBwsO5iM8nJ7SeJsl12WG0VOUrpDUTE/view?usp=sharing">Why Do The Rich Oppose Redistribution? An Experiment With America’s Top 5%</a> (with Lasse Jessen, Marko Klasnja and Paul Smeets)</li>
     </ul>
     <h3>Work in Progress</h3>
     <ul>
