--- a/links.html
+++ b/links.html
@@ -87,6 +87,7 @@
                 <li><a href="https://www.econ.uzh.ch/en/people/graduatestudents/zuend.html">Christian Zünd (University of Zurich)</a></li>
             </ul>
         </div>
+        <footer></footer>
     </div>
 </body>
 </html>
