--- a/media.html
+++ b/media.html
@@ -48,12 +48,14 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
+
   <div class="container">
+    <div class="media">
         <!--<header>
             <h1>Alain Cohn</h1>
 
         </header> -->
-        <h2>Media</h2>
+        <h2 id="heading2" class="mediaheading">Media</h2>
         <div class="examples text-block">
             <h3>Some examples of media articles covering my research:</h3>
             <ul>
@@ -98,5 +100,6 @@
             <a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? (WBEZ 91.5 Chicago)</a>
         </div>
     </div>
+  </div>
 </body>
 </html>
