--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
       <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
   <!-- Hidden visually, intended for screen readers -->
