add contact img

--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,9 @@
 </div>
 </header>
   <div class="container">
-<!--        <header>
-            <h1>Alain Cohn</h1>
-
-            <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
-        </header> -->
+    <div class="contactpic">
+        <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
+    </div>    
         <h2>Contact</h2>
         <div class="info text-block">
             <p>The University of Michigan School of Information</p>
