--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,9 @@
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
     </div>    
-    <h2 class="contactheading">Contact</h2>
+    <div class="contactheading">
+      <h2>Contact</h2>
+    </div>
         <div class="info text-block">
             <p>The University of Michigan School of Information</p>
             <p>105 S State St</p>
