--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
     </div>    
     <div class="contactheading">
-      <h2>Contact</h2>
+      <h2 id="heading2">Contact</h2>
     </div>
         <div class="info text-block">
             <p>The University of Michigan School of Information</p>
