update contact info

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <div class="contactheading">
       <h2 id="heading2">Contact</h2>
     </div>
-        <div class="info text-block">
+        <div class="contactinfo">
             <p>The University of Michigan School of Information</p>
             <p>105 S State St</p>
             <p>Ann Arbor, MI 48109</p>
