--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
       <li><a href="research.html">RESEARCH</a></li>
       <li><a href="teaching.html">TEACHING</a></li>
       <li><a href="media.html">MEDIA</a></li>
-      <li><a href="cv.html">CV</a></li>
+      <li><a href="cohn_cv.pdf" target="_blank">CV</a></li>
       <li><a href="links.html">LINKS</a></li>
       <li><a href="contact.html" id="currentpage">CONTACT</a></li>
     </ul>
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
-    </div>    
+    </div>
     <div class="contactheading">
       <h2 id="heading2">Contact</h2>
     </div>
