--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@
       <li><a href="research.html">RESEARCH</a></li>
       <li><a href="teaching.html" id="currentpage">TEACHING</a></li>
       <li><a href="media.html">MEDIA</a></li>
-      <li><a href="cv.html">CV</a></li>
+      <li><a href="cohn_cv.pdf" target="_blank">CV</a></li>
       <li><a href="links.html">LINKS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
