--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <p>The University of Michigan School of Information</p>
             <p>105 S State St</p>
             <p>Ann Arbor, MI 48109</p>
-            <p>Email: adcohn[at]umich[dot]edu</p>
+            <p>Email: adcohn&#64;umich&period;edu</p>
         </div>
     </div>
 </body>
