footer added in index.html

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <p>Why Do The Rich Oppose Redistribution? An Experiment With America's Top 5%</p>
       </div>
     </div>
+    <footer>
+        <p>&copy;Alain Cohn</p>
+    </footer>
     </div>
 </body>
 </html>
