footer added to all pages

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,9 @@
             <p>Ann Arbor, MI 48109</p>
             <p>Email: adcohn&#64;umich&period;edu</p>
         </div>
+        <footer>
+            <p>&copy; Alain Cohn</p>
+        </footer>
     </div>
 </body>
 </html>
