--- a/links.html
+++ b/links.html
@@ -87,7 +87,9 @@
                 <li><a href="https://www.econ.uzh.ch/en/people/graduatestudents/zuend.html">Christian Zünd (University of Zurich)</a></li>
             </ul>
         </div>
-        <footer></footer>
+        <footer>
+            <p>&copy; Alain Cohn</p>
+        </footer>
     </div>
 </body>
 </html>
