--- a/teaching.html
+++ b/teaching.html
@@ -83,6 +83,9 @@
           <li>Empirical Methods of Experimental Economics (Master), University of Zurich</li>
       </ul>
     </div>
+    <footer>
+        <p>&copy; Alain Cohn</p>
+    </footer>
   </div>
     </body>
 </html>
