--- a/research.html
+++ b/research.html
@@ -96,7 +96,7 @@
     </ul>
     <p>*Note: All articles are the sole copyright of the respective publishers. Materials are provided for educational use only. Downloading of materials constitutes an agreement that the materials are for personal use only.</p>
     <footer>
-
+        <p>&copy; Alain Cohn</p>
     </footer>
 </div>
 </div>
