--- a/media.html
+++ b/media.html
@@ -84,10 +84,10 @@
         <div class="german text-block">
             <h3>Media articles in German:</h3>
             <ul>
-                <li><a href="https://www.nzz.ch/auch-finanzprofis-haben-gefuehle-1.17572138">Auch Finanzprofis haben Gefühle </a><span class="media_title">Neue Zürcher Zeitung)</a></li>
-                <li><a href="https://drive.google.com/file/d/1-_nWPmwGqTLaHzyCH5Y1zIn4IgC2GJus/view">Das gewisse Etwas am Arbeitsplatz </a><span class="media_title">Neue Luzerner Zeitung)</a></li>
-                <li><a href="https://drive.google.com/file/d/1-8AlxEZB8-JLSSOmdN9Ckyl4CwWZQRDr/view">Mehr Lohn - mehr Motivation, ein Trugschluss? </a><span class="media_title">Goldwyn Reports)</a></li>
-                <li><a href="https://drive.google.com/file/d/1pftnRSg6GiKcnl5_uOB8J2d0Oir7jMHn/view">Lohnkürzungen: Geteiltes Leid ist halbes Leid? </a><span class="media_title">Personal Quarterly)</a></li>
+                <li><a href="https://www.nzz.ch/auch-finanzprofis-haben-gefuehle-1.17572138">Auch Finanzprofis haben Gefühle </a><span class="media_title">Neue Zürcher Zeitung</span></li>
+                <li><a href="https://drive.google.com/file/d/1-_nWPmwGqTLaHzyCH5Y1zIn4IgC2GJus/view">Das gewisse Etwas am Arbeitsplatz </a><span class="media_title">Neue Luzerner Zeitung</span></li>
+                <li><a href="https://drive.google.com/file/d/1-8AlxEZB8-JLSSOmdN9Ckyl4CwWZQRDr/view">Mehr Lohn - mehr Motivation, ein Trugschluss? </a><span class="media_title">Goldwyn Reports</span></li>
+                <li><a href="https://drive.google.com/file/d/1pftnRSg6GiKcnl5_uOB8J2d0Oir7jMHn/view">Lohnkürzungen: Geteiltes Leid ist halbes Leid? </a><span class="media_title">Personal Quarterly</span></li>
                 <li><a href="https://www.handelsblatt.com/politik/konjunktur/oekonomie/wissenswert/bezahlung-wenn-sich-ungleichheit-raecht/4050250.html?ticket=ST-13574537-NXKqSwVapfRibDzqG1be-ap2">Wenn sich Ungleichheit rächt (Handelsblatt)</a></li>
             </ul>
         </div>
