updated contact page mobile view

--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
     </div>
-    <div class="contactheading">
+    <!-- <div class="contactheading">
       <h2 id="heading2">Contact</h2>
-    </div>
+    </div> -->
         <div class="contactinfo">
             <p>The University of Michigan School of Information</p>
             <p>105 S State St</p>
