--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,9 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
+<div class="contact">
   <div class="container">
+          <h2 id="heading2">Contact</h2>
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
     </div>
@@ -61,9 +63,33 @@
             <p>Ann Arbor, MI 48109</p>
             <p>Email: adcohn&#64;umich&period;edu</p>
         </div>
+
+
+         <div id="formtext">
+           <h2>Get in touch</h2>
+           <p>Cup of coffee or just an email, you know what to do:</p>
+         </div>
+        <div class="containered">
+         <div class="row">
+
+           <div class="column">
+             <form   action="https://formspree.io/mrggpdnr" method="POST">
+               <label for="fname">First Name</label>
+               <input type="text" id="fname" name="firstname" placeholder="Your name..">
+               <label for="lname">Last Name</label>
+               <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+               <label for="subject">Subject</label>
+               <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+               <input type="submit" value="Submit">
+             </form>
+           </div>
+         </div>
+        </div>
         <footer>
             <p>&copy; Alain Cohn</p>
         </footer>
     </div>
+  </div>
 </body>
 </html>
