Lots of changes

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 </header>
 <div class="contact">
   <div class="container">
-          <h2 id="heading2">Contact</h2>
+
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
     </div>
@@ -66,8 +66,8 @@
 
 
          <div id="formtext">
-           <h2>Get in touch</h2>
-           <p>Cup of coffee or just an email, you know what to do:</p>
+           <h2>Contact form</h2>
+
          </div>
         <div class="containered">
          <div class="row">
