--- a/teaching.html
+++ b/teaching.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e211125178.js" crossorigin="anonymous"></script>
     <title>Alain Cohn</title>
 </head>
 <body>
