--- a/links.html
+++ b/links.html
@@ -50,7 +50,7 @@
 </header>
   <div class="container">
         <h2 id="heading2" class="linkheading">Links</h2>
-        <div class="professional text-block">
+        <div class="professional">
             <h3>Professional</h3>
             <ul>
                 <li><a href="https://www.si.umich.edu/people/alain-cohn">University of Michigan</a></li>
@@ -58,7 +58,7 @@
                 <li><a href="https://www.researchgate.net/profile/Alain_Cohn">Research Gate</a></li>
             </ul>
         </div>
-        <div class="collaborators text-block">
+        <div class="collaborators">
             <h3>Collaborators</h3>
             <ul>
                 <li><a href="https://cesr.usc.edu/people/staff/lcarvalh">Leandro Carvalho (University of Southern California)</a></li>
