--- a/media.html
+++ b/media.html
@@ -97,7 +97,8 @@
         </div>
         <div class="podcast text-block">
             <h3>Podcasts:</h3>
-            <a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? </a><span class="media_title">WBEZ 91.5 Chicago</span>
+            <a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? WBEZ 91.5 Chicago</a>
+            <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
         </div>
     </div>
     <footer>
