--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=200px>
   </header> -->
   <!-- Begin container -->
-  <div class="container">
+  <div class="container" id="main">
     <div class="profilepic">
       <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=250px>
     </div>
