--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 </div>
 </header>
 <div class="contact">
-  <div class="container">
+  <div class="container" id="main">
 
     <div class="contactpic">
         <img src="img/northquad.jpg" alt="Universiy of Michigan North Quad">
