--- a/links.html
+++ b/links.html
@@ -48,8 +48,8 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
-  
-<div class="container">
+
+<div class="container" id="main">
     <h2 id="heading2" class="linkheading">Links</h2>
     <div class="professional">
         <h3>Professional</h3>
