--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
-  <div class="container">
+  <div class="container" id="main">
     <div class="research">
     <h2 id="heading_research">Research</h2>
     <h3 id="publications_h3">Publications</h3>
