--- a/media.html
+++ b/media.html
@@ -49,7 +49,7 @@
 </div>
 </header>
 
-  <div class="container">
+  <div class="container" id="main">
     <div class="media">
         <!--<header>
             <h1>Alain Cohn</h1>
