--- a/teaching.html
+++ b/teaching.html
@@ -48,7 +48,7 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
-  <div class="container">
+  <div class="container" id="main">
     <div class="teaching">
       <h2 id="heading2">Teaching</h2>
       <h3>2019</h3>
