Now passes AXE and WAVE

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
   <a href="#main-menu-toggle"
      class="backdrop"
      tabindex="-1"
+     aria-label="first"
      aria-hidden="true" hidden></a>
 </div>
 </header>
