--- a/research.html
+++ b/research.html
@@ -44,6 +44,7 @@
   </nav>
   <a href="#main-menu-toggle"
      class="backdrop"
+     aria-label="first"
      tabindex="-1"
      aria-hidden="true" hidden></a>
 </div>
