--- a/media.html
+++ b/media.html
@@ -94,12 +94,16 @@
         </div>
         <div class="video">
             <h3>Videos:</h3>
-            <a href="https://www.youtube.com/watch?v=DpCz9EumjUw&feature=emb_title">Does Corporate Culture Really Matter?</a>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=DpCz9EumjUw&feature=emb_title">Does Corporate Culture Really Matter?</a></li>
+            </ul>
         </div>
         <div class="podcast text-block">
             <h3>Podcasts:</h3>
-            <a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? WBEZ 91.5 Chicago</a>
-            <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
+            <ul>
+              <li><a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? WBEZ 91.5 Chicago</a></li>
+              <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
+            </ul>
         </div>
     </div>
     <footer>
