--- a/media.html
+++ b/media.html
@@ -91,6 +91,15 @@
                 <li><a href="https://drive.google.com/file/d/1pftnRSg6GiKcnl5_uOB8J2d0Oir7jMHn/view">Lohnkürzungen: Geteiltes Leid ist halbes Leid? </a><span class="media_title">Personal Quarterly</span></li>
                 <li><a href="https://www.handelsblatt.com/politik/konjunktur/oekonomie/wissenswert/bezahlung-wenn-sich-ungleichheit-raecht/4050250.html?ticket=ST-13574537-NXKqSwVapfRibDzqG1be-ap2">Wenn sich Ungleichheit rächt </a><span class="media_title">Handelsblatt</span></li>
             </ul>
+            <h3>Videos:</h3>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=DpCz9EumjUw&feature=emb_title">Does Corporate Culture Really Matter?</a></li>
+            </ul>
+            <h3>Podcasts:</h3>
+            <ul>
+              <li><a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? WBEZ 91.5 Chicago</a></li>
+              <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
+            </ul>
         </div>
         <div class="video">
             <h3>Videos:</h3>
