--- a/media.html
+++ b/media.html
@@ -101,7 +101,7 @@
               <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
             </ul>
         </div>
-        <div class="video">
+        <!-- <div class="video">
             <h3>Videos:</h3>
             <ul>
               <li><a href="https://www.youtube.com/watch?v=DpCz9EumjUw&feature=emb_title">Does Corporate Culture Really Matter?</a></li>
@@ -111,10 +111,10 @@
             <h3>Podcasts:</h3>
             <ul>
               <li><a href="https://www.wbez.org/shows/wbez-news/is-job-hopping-good-for-you/f39751e1-cdf0-4a30-a46e-6f369312ad18">Is Job Hopping Good For You? WBEZ 91.5 Chicago</a></li>
-              <!-- <span class="media_title">WBEZ 91.5 Chicago</span> -->
+              <span class="media_title">WBEZ 91.5 Chicago</span> 
             </ul>
         </div>
-    </div>
+    </div> -->
     <footer>
         <p>&copy; Alain Cohn</p>
     </footer>
