Fixing the mobile view

--- a/links.html
+++ b/links.html
@@ -49,7 +49,7 @@
      aria-hidden="true" hidden></a>
 </div>
 </header>
-
+<div class="linked">
 <div class="container" id="main">
     <h2 id="heading2" class="linkheading">Links</h2>
     <div class="professional">
@@ -92,6 +92,7 @@
     <footer>
         <p>&copy; Alain Cohn</p>
     </footer>
+</div>
 </div>
 </body>
 </html>
