Final commit (hopefully)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>Why Do The Rich Oppose Redistribution? An Experiment With America's Top 5%</p>
       </div>
     </div>
-    <footer>
+    <footer id="indexfoot">
         <p>&copy; Alain Cohn</p>
     </footer>
     </div>
