--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Begin container -->
   <div class="container" id="main">
     <div class="profilepic">
-      <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture" width=250px>
+      <img src="img/alain_cohn_profile.jpg" alt="Alain Cohn Profile Picture">
     </div>
     <div class="aboutme">
         <h2>About Me</h2>
