--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
     <h2 id="heading_research">Research</h2>
     <h3 id="publications_h3">Publications</h3>
     <dl id="research">
-        <dt><a href="http://www.google.com/url?q=http%3A%2F%2Fscience.sciencemag.org%2Fcgi%2Fcontent%2Ffull%2Fscience.aau8712%3Fijkey%3Di0aoWpwTObRgM%26keytype%3Dref%26siteid%3Dsci&sa=D&sntz=1&usg=AFQjCNH8-K-W4GqdukKzxT8shBIBqb6pjw">Civic Honesty Around The Globe</a> [free access] (with Michel Maréchal, David Tannenbaum and Christian Zünd) <b>Science</b>, June 20, 2019. <a href="https://www.google.com/url?q=https%3A%2F%2Fdataverse.harvard.edu%2Fdataverse%2Fhonesty%2F&sa=D&sntz=1&usg=AFQjCNE4yE3NTMiTNRcLjWcMQZnuQ_GsNg">Data and code<a></dt>
+        <dt><a href="http://www.google.com/url?q=http%3A%2F%2Fscience.sciencemag.org%2Fcgi%2Fcontent%2Ffull%2Fscience.aau8712%3Fijkey%3Di0aoWpwTObRgM%26keytype%3Dref%26siteid%3Dsci&sa=D&sntz=1&usg=AFQjCNH8-K-W4GqdukKzxT8shBIBqb6pjw">Civic Honesty Around The Globe</a> [free access] (with Michel Maréchal, David Tannenbaum and Christian Zünd) <b>Science</b>, June 20, 2019. <a href="https://www.google.com/url?q=https%3A%2F%2Fdataverse.harvard.edu%2Fdataverse%2Fhonesty%2F&sa=D&sntz=1&usg=AFQjCNE4yE3NTMiTNRcLjWcMQZnuQ_GsNg">Data and code</a></dt>
         <!-- <dd><a href=""- Data and code</dd> -->
         <dt><a href="https://drive.google.com/file/d/1dkfYfWt4kNlipoz7u5vY7RUK1BEQf5fM/view?usp=sharing">Laboratory Measure of Cheating Predicts School Misconduct</a>(with Michel Maréchal) <b>Economic Journal</b>, 128 (615), 2743–2754, 2018. <a href="https://drive.google.com/file/d/1OzErWjkrBKLGu7ikWKoLgYO4wFUs7ikM/view?usp=sharing">Data and code</a></dt>
         <!-- <dd><a href=""- Data and code</dd> -->
