--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
         <!-- <dd><a href "" >Online appendix</dd> -->
         <li><a href="https://drive.google.com/file/d/1VTM_jvNazzryPKkx1QGe2xqoyf1AV4zz/view?usp=sharing">Do Professional Norms in the Banking Industry Favor Risk-Taking?</a> (with Ernst Fehr and Michel Maréchal) <b>Review of Financial Studies</b>, 30.11: 3801–3823, 2017. <a href="https://drive.google.com/file/d/1Fecp3Al35JVwsWnac0sYVLJ_UoMxftMq/view?usp=sharing">Online appendix</a></li>
         <!-- <dd>Online appendix</dd> -->
-        <li><a href="https://drive.google.com/file/d/1CNUBfZXXW8iTfmt7dvD8UigvF9Kx3cEe/view?usp=sharing">Priming in Economics</a> (with Michel Maréchal), <b>Current Opinion in Psychology</b>, 12:17–21, 2016.</dt>
+        <li><a href="https://drive.google.com/file/d/1CNUBfZXXW8iTfmt7dvD8UigvF9Kx3cEe/view?usp=sharing">Priming in Economics</a> (with Michel Maréchal), <b>Current Opinion in Psychology</b>, 12:17–21, 2016.</li>
         <li><a href="https://drive.google.com/file/d/1wb-cQKngKSvZPI6tz7sQIiFD6Qj8s812/view?usp=sharing">Bad Boys: How Criminal Identity Salience Affects Rule Violation</a> (with Michel Maréchal and Thomas Noll), <b>Review of Economic Studies</b>, 82(4): 1289–1308, 2015. <a href="https://drive.google.com/open?id=1UpIcPhv5Xh_lDhUTQtE2qqeUBfS62AkJ">Online appendix</a><a href="https://drive.google.com/drive/folders/1NF92EWsTjkz7XCJLKW2jFbaWMwHgPWDR?usp=sharing">Data and Code</a></li>
         <!-- <dd><a href=""></a>Online appendix</dd> -->
         <!-- <dd><a href=""></a>Data and code</dd> -->
